# Journal

./: CMakeLists.txt  Journal.md  main.cpp  main.qml  qmlmodules.cmake  readme.md
Content/: CMakeLists.txt  Home_Subpage_1.qml  Home_Subpage_2.qml  Home_Subpage_3.qml  Homepage.qml
Image/: imgs.qrc
Qml/: Test.qml  main.qml  qml.qrc
Qml/Base/: J_Icon.qml  J_Iconbutton.qml  J_Tabview.qml
Qml/Component/: J_Taskview.qml
Qml/HomePage/: Home_Smalltitle.qml  Home_Subpage_2.qml  Homepage.qml
Src/: GlobalSignals.hpp  app_environment.hpp  import_qml_plugins.hpp  main.cpp  model.hpp  mysql.cpp  mysql.hpp
Src/model/: goal.hpp  target.hpp  task.hpp
imports/: CMakeLists.txt
imports/Base/: CMakeLists.txt  J_Combobox.qml  J_Rectangle.qml  J_Scrollbar.qml  J_Tabview.qml  J_Text.qml
imports/Components/: CMakeLists.txt  GlobalSignal.qml  J_Sidebar.qml  J_Tasklist.qml  J_Taskview.qml
imports/Components/J_Goal/: J_GoalItem.qml  J_GoalList.qml  J_GoalSView.qml
imports/Components/J_Target/: J_TargetItem.qml  J_TargetList.qml  J_TargetSView.qml  J_TargetSView.qml.autosave
imports/Components/J_Task/: J_EditTask.qml  J_TaskItem.qml  J_TaskSView.qml  J_Tasklist.qml
